@@ -1,4 +1,4 @@
-Kig v0.4.1
+Kig v0.5.0
 Dominique Devriese <devriese@kde.org>
 ----------------------------------------------------------------------
 Kig: KDE Interactive Geometry
