@@ -1,6 +1,6 @@
 #MIN_CONFIG
 
-AM_INIT_AUTOMAKE(kig, 0.4.1)
+AM_INIT_AUTOMAKE(kig, 0.5.0)
 
 dnl Checks for header files.
 AC_HEADER_STDC
